--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
-          rel="stylesheet">
-    <title>Archy</title>
+          rel="stylesheet"><link rel="icon" type="image/png" href="assets/img/favicon-32x32.png">
+
+    <title>Archdaily</title>
 </head>
 <body>
 <header id="mainHeader" class="header">
