--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <ul class="nav-menu">
                                 <li><a href="#"><span>Submit a project</span></a></li>
                                 <li><a href="#" class="navlinks"><span>Advertise</span></a></li>
-                                <li><a href="#" class="navlinks"><span class="separator"></span></a></li>
+                                <span class="separator"></span>
                                 <li><a href="#" class="navlinks"><span class="flag-colors"> </span>World</a>
                                     <ul class="subnav-menu hidden">
                                         <li><a href="#" class="navlinks"><span class="flag-brasil">Flag</span></a></li>
